Attempt at fixing the issue with pages on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 html {
     min-height: 100vh;
-    display: inline-flex;
+    display: grid;
 }
 
 body {
